--- a/css/style.css
+++ b/css/style.css
@@ -672,7 +672,7 @@ p {
                      Hire 
 -------------------------------------------------------- */
 .hire {
-  background-image: url(../img/vulgær.jpg);
+  background-image: url(../img/Jentekveld.jpg);
   background-attachment: fixed;
   background-size: cover;
   position: relative;
@@ -728,7 +728,7 @@ p {
                      Contact 
 -------------------------------------------------------- */
 .contact {
-  background-image: url(../img/vulgær.jpg);
+  background-image: url(../img/Jentekveld.jpg);
   background-size: cover;
   background-attachment: fixed;
   position: relative;
